tests/baselines/reference/ambientDeclarationsPatterns_merging2.errors.txt
testB.ts(1,22): error TS2305: Module '"*.foo"' has no exported member 'onlyInA'.
testB.ts(1,31): error TS2305: Module '"*.foo"' has no exported member 'alsoOnlyInA'.


==== types.ts (0 errors) ====
    declare module "*.foo" {
      let everywhere: string;
    }
    
    
==== testA.ts (0 errors) ====
    import { everywhere, onlyInA, alsoOnlyInA } from "a.foo";
    declare module "a.foo" {
      let onlyInA: number;
    }
    
==== testB.ts (2 errors) ====
    import { everywhere, onlyInA, alsoOnlyInA } from "b.foo"; // Error
                         ~~~~~~~
!!! error TS2305: Module '"*.foo"' has no exported member 'onlyInA'.
                                  ~~~~~~~~~~~
!!! error TS2305: Module '"*.foo"' has no exported member 'alsoOnlyInA'.
    declare module "a.foo" {
      let alsoOnlyInA: number;
    }